@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: x_ac_gpl_licensed.m4,v 1.1 2004/03/05 20:04:18 dun Exp $
+## $Id: x_ac_gpl_licensed.m4,v 1.2 2004/03/12 00:33:48 dun Exp $
 ##*****************************************************************************
 #  AUTHOR:
 #    Chris Dunlap <cdunlap@llnl.gov>
@@ -12,7 +12,6 @@
 ##*****************************************************************************
 
 AC_DEFUN([X_AC_GPL_LICENSED],
-[
-  AC_DEFINE([GPL_LICENSED], [1],
+[ AC_DEFINE([GPL_LICENSED], [1],
     [Define to 1 if licensed under terms of the GNU General Public License.])
 ])
