@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: x_ac_humor.m4,v 1.1 2004/03/05 20:04:18 dun Exp $
+## $Id: x_ac_humor.m4,v 1.2 2004/03/12 00:33:48 dun Exp $
 ##*****************************************************************************
 #  AUTHOR:
 #    Chris Dunlap <cdunlap@llnl.gov>
@@ -12,6 +12,11 @@
 ##*****************************************************************************
 
 AC_DEFUN([X_AC_HUMOR],
-[
-  AC_CACHE_CHECK([for a sense of humor], [x_ac_cv_humor], [x_ac_cv_humor=yes])
+[ AC_CACHE_CHECK(
+    [for a sense of humor],
+    [x_ac_cv_humor],
+    [
+      x_ac_cv_humor=no
+      true && x_ac_cv_humor=yes
+    ])
 ])
