@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: x_ac_meta.m4,v 1.2 2004/03/11 20:56:54 dun Exp $
+## $Id: x_ac_meta.m4,v 1.3 2004/03/12 00:33:48 dun Exp $
 ##*****************************************************************************
 #  AUTHOR:
 #    Chris Dunlap <cdunlap@llnl.gov>
@@ -12,7 +12,7 @@
 ##*****************************************************************************
 
 AC_DEFUN([X_AC_META],
-  [AC_MSG_CHECKING([metadata])
+[ AC_MSG_CHECKING([metadata])
 
   _x_ac_meta_got_file=no
   if test -f "$srcdir/META"; then
